--- a/app/templates/goaway.html
+++ b/app/templates/goaway.html
@@ -1,7 +1,5 @@
 {% block body %}
-
-    <div style='background-color: darkcyan'>
+    <div style='background-color: darkcyan; color:red'>
         <h3>Go Away !</h3>
     </div>
-
 {% endblock %}
