--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,7 @@
     <div>
         <h3>hello from docker container</h3>
         <h2>By : Yishai z.</h2>
+        <h5>update the application. should be displayed after runnning pipeline</h5>
     </div>
 
 
